feat: Redis caching + bug fixes + validation improvements